Changed third party dependency location and finished vertex buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ add_library( gl-plusplus ${SRC} )
 find_package( OpenGL )
 
 target_link_libraries( gl-plusplus PUBLIC ${OPENGL_gl_LIBRARY})
-target_include_directories( gl-plusplus PUBLIC includes/ ThirdParty/ )
+target_include_directories( gl-plusplus PUBLIC includes/ depends/ )
